# globalstockmarket-api

./: CONTRIBUTING.md  README.md  openapi.yaml
android/: README.md  build.gradle
android/src/main/java/com/apiverve/client/: APIClient.java  APIException.java
android/src/main/java/com/apiverve/globalstockmarket/: APIClient.java  APIResponse.java
android/src/main/java/com/apiverve/globalstockmarket/data/: ResponseModels.java
dart/: CHANGELOG.md  README.md  pubspec.yaml
dart/lib/: apiverve_globalstockmarket.dart
dart/lib/src/: client.dart  models.dart
examples/: README.md
examples/csharp/: basic.cs
examples/java/: basic.java
examples/javascript/: basic.js  error-handling.js
examples/python/: basic.py
go/: README.md  client.go  go.mod  types.go
npm/: README.md  index.d.ts  index.js  package.json
npm/examples/: basic.js
nuget/: GlobalStockMarketAPIClient.cs  GlobalStockMarketAPIClient.csproj  GlobalStockMarketAPIClient.sln  GlobalStockMarketQueryOptions.cs  Readme.md  ResponseObj.cs
python/: README.md  pyproject.toml
python/src/apiverve_globalstockmarket/: __init__.py  apiClient.py  exceptions.py  setup.py  setup_dep.py
python/src/apiverve_globalstockmarket/tests/: test_api.py
python/tests/: test_api.py
