[project]
name = "apiverve-globalstockmarket"
version = "1.1.14"
authors = [
  { name="APIVerve", email="hello@apiverve.com" },
]
description = "Global Stock Market is a tool for comparing stock market performance across 36 countries. It returns a normalized share price index (2015=100) from OECD data, allowing you to compare market growth between countries over time."
keywords = []
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
dependencies = [
    "requests>=2.25.0"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering",
    "Topic :: Education",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet",
    "Topic :: Communications",
    "Topic :: Office/Business",
    "Topic :: Text Processing",
    "Topic :: Security",
    "Topic :: Database",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Natural Language :: English",
]

[project.urls]
Homepage = "https://apiverve.com?utm_source=pypi"
Repository = "https://github.com/apiverve/globalstockmarket-api"
Documentation = "https://docs.apiverve.com/api/globalstockmarket?utm_source=pypi"
Twitter = "https://twitter.com/apivervehq"